feat: add SVG output format support
Add support for generating animated SVG files as an output format.

- Add new SVG generator with CSS keyframe animations
- Support all existing VHS style options (margins, padding, themes, etc.)
- Add frame deduplication for optimized file sizes
- Update documentation and examples to include SVG format
- Add test coverage for SVG generation

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,7 +7,7 @@ includes:
 variables:
   main: "."
   description: "A tool for recording terminal GIFs"
-  github_url: "https://github.com/charmbracelet/vhs"
+  github_url: "https://github.com/agentstation/vhs"
   maintainer: "Maas Lalani <maas@charm.sh>"
   brew_commit_author_name: "Maas Lalani"
   brew_commit_author_email: "maas@charm.sh"
